# tokio-seqpacket-rs

./: .cirrus.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
src/: ancillary.rs  borrow_fd.rs  lib.rs  listener.rs  mio.rs  socket.rs  split.rs  sys.rs  ucred.rs  unix_seqpacket.rs  unix_seqpacket_listener.rs
src/ancillary/: mod.rs  reader.rs  socket_cred.rs  writer.rs
tests/: abstract_namespace.rs  ancillary_fds.rs  ancillary_fds_dropped.rs  ancillary_fds_peek.rs  ancillary_with_fd.rs  listener.rs  multiple_fds.rs  raw_fd.rs  socket.rs  split.rs  unix_seqpacket.rs  unix_seqpacket_listener.rs
tests/ancillary_fd_helper/: mod.rs
