[package]
name = "tokio-seqpacket"
version = "0.4.1"
license = "BSD-2-Clause"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Fizyr B.V. <info@fizyr.com>",
]
repository = "https://github.com/de-vri-es/tokio-seqpacket-rs"
readme = "README.md"
description = "unix seqpacket sockets for tokio"
keywords = ["seqpacket", "socket", "unix", "async", "tokio"]
categories = ["network-programming", "os::unix-apis"]

edition = "2018"

[dependencies]
futures = "0.3.7"
libc = "0.2.77"
socket2 = { version = "0.3.15", features = ["unix", "pair"] }
tokio = { version = "1.0", features = ["net"] }

[dev-dependencies]
assert2 = "0.3.3"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
tempfile = "3.1.0"
