[package]
name = "tokio-seqpacket"
version = "0.5.4"
license = "BSD-2-Clause"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Fizyr B.V. <info@fizyr.com>",
]
repository = "https://github.com/de-vri-es/tokio-seqpacket-rs"
readme = "README.md"
description = "unix seqpacket sockets for tokio"
keywords = ["seqpacket", "socket", "unix", "async", "tokio"]
categories = ["network-programming", "os::unix-apis"]

edition = "2018"

[dependencies]
libc = "0.2.96"
tokio = { version = "1.0", features = ["net"] }
filedesc = "0.5.0"

[dev-dependencies]
assert2 = "0.3.5"
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
tempfile = "3.1.0"
