[package]
name = "tokio-seqpacket"
version = "0.8.1"
license = "BSD-2-Clause"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Fizyr B.V. <info@fizyr.com>",
]
repository = "https://github.com/de-vri-es/tokio-seqpacket-rs"
readme = "README.md"
description = "unix seqpacket sockets for tokio"
keywords = ["seqpacket", "socket", "unix", "async", "tokio"]
categories = ["network-programming", "os::unix-apis"]

edition = "2021"

[dependencies]
libc = "0.2.137"
tokio = { version = "1.22", features = ["net"] }
filedesc = "0.6.1"

[dev-dependencies]
assert2 = "0.3.7"
tokio = { version = "1.22", features = ["rt", "rt-multi-thread", "macros", "time"] }
tempfile = "3.3.0"
